Deleted duplicate link to Support

--- a/_includes/footer_menu.html
+++ b/_includes/footer_menu.html
@@ -2,5 +2,5 @@
 <a href="/support/">Support</a> -
 <a href="/tos/">TOS</a> -
 <a href="/privacy/">Privacy</a> -
-<a href="/support/">Support</a> -
+<a href="/about/">About</a> -
 <a href="/copyright/">Copyright</a>
