updated comments, added images

--- a/css/comments.css
+++ b/css/comments.css
@@ -33,7 +33,7 @@
 
 /*
 .comment {
-    background-image: url(/images/comment-header.svg);
+    background-image: url(/assets/images/comment-header.svg);
     background-repeat: no-repeat;
     background-position: 60px 10px;
     margin-bottom: 20px;
