--- a/css/main.sass
+++ b/css/main.sass
@@ -204,10 +204,10 @@ body
   position: absolute
   top: 10px
   right: 30px
-  line-height: 44px
+  line-height: 24px
   display: inline-block
   white-space: nowrap
-  color: rgba(0,0,0,0.25)
+  color: rgba(255, 255, 255, 0.75)
   font-size: 14px
   letter-spacing: -0.02em
   font-weight: 400
