--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,14 +7,22 @@
     {% include header.html %}
     <main class="content" role="main">
         <article class="post">
-            {% if page.image %}
             <div class="article-image">
-                <div class="post-image-image" style="background-image: url({% if page.image %}{{ page.image | prepend: site.baseurl }}{% endif %})">
+                {% if page.image %}
+                <div class="post-image-image" style="background-image: url({% if page.image %}{{ page.image | prepend: site.baseurl }}{% else %}{{ test }}{% endif %})">
                     Article Image
                 </div>
-                <div class="post-image-image2" style="background-image: url({% if page.image2 %}{{ page.image2 | prepend: site.baseurl }}{% endif %})">
+                <div class="post-image-image2" style="background-image: url({% if page.image2 %}{{ page.image2 | prepend: site.baseurl }}{% else %}{{ test }}{% endif %})">
                     Article Image
                 </div>
+                {% else %}
+                <div class="post-image-image" style="background-image: url('/assets/images/logo_image.png')">
+                    Article Image
+                </div>
+                <div class="post-image-image2" style="background-image: url('/assets/images/logo_image.png')">
+                    Article Image
+                </div>
+                {% endif %}
                 <div class="post-meta">
                     <h1 class="post-title">{{ page.title }}</h1>
                     <div class="cf post-meta-text">
@@ -23,32 +31,17 @@
                         {% if page.date %} on
                         <time datetime="{{ page.date | date: " %F %R " }}">{{ page.date | date_to_string }}</time>
                         <!-- , tagged on {{#foreach tags}}<span class="post-tag-{{slug}}">{{#if @first}}{{else}}, {{/if}}<a href="/tag/{{slug}}">{{name}}</a></span>{{/foreach}} -->
-                        {% endif %} - {{ page.content | number_of_words }} Words - {{ content | reading_time_as_i }}.
+                        {% endif %} - {{ page.content | number_of_words }} Words - {{ content | reading_time_as_i }}
                     </div>
                     <div style="text-align:center">
                         <a href="#topofpage" class="topofpage"><i class="fa fa-angle-down"></i></a>
                     </div>
                 </div>
             </div>
-            {% else %}
-            <div class="noarticleimage">
-                <div class="post-meta">
-                    <h1 class="post-title">{{ page.title }}</h1>
-                    <div class="cf post-meta-text">
-                        <div class="author-image" style="background-image: url({{ site.author_image | prepend: site.baseurl }})">Blog Logo</div>
-                        <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ page.author }}</h4>
-                        {% if page.date %} on
-                        <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time> {% endif %}
-                        <!-- , tagged on {{#foreach tags}}<span class="post-tag-{{slug}}">{{#if @first}}{{else}}, {{/if}}<a href="/tag/{{slug}}">{{name}}</a></span>{{/foreach}} -->
-                    </div>
-                </div>
-            </div>
-            <br>
-            <br>
-            <br> {% endif %}
+
             <section class="post-content">
                 <div class="post-reading">
-                    {{ page.content | number_of_words }} words <br> {{ content | reading_time_as_i }}
+                    {{ page.content | number_of_words }} words - {{ content | reading_time_as_i }}
                 </div>
                 <a name="topofpage"></a>
                 {{content}}
