--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@
 
             <section class="post-content">
                 <div class="post-reading">
-                    <span class="post-reading-time"></span> Read
+                    <span class="post-reading-time"></span> read
                 </div>
                 <a name="topofpage"></a>
                 {{content}}
