--- a/_includes/footer_menu.html
+++ b/_includes/footer_menu.html
@@ -1,7 +1,8 @@
+<!-- <a href="/about/">About</a> -
 <a href="/projects/">Projects</a> -
 <a href="/search/">Search</a> -
-<a href="/support/">Support</a> -
+<a href="/support/">Support</a> - -->
+<a href="/work/">Work</a> -
 <a href="/tos/">TOS</a> -
 <a href="/privacy/">Privacy</a> -
-<a href="/about/">About</a> -
 <a href="/copyright/">Copyright</a>
