--- a/_includes/footer_menu.html
+++ b/_includes/footer_menu.html
@@ -1,8 +1,5 @@
-<!-- <a href="/about/">About</a> -
-<a href="/projects/">Projects</a> -
-<a href="/search/">Search</a> -
-<a href="/support/">Support</a> - -->
 <a href="/work/">Work</a> -
+<a href="/support/">Support</a> -
 <a href="/tos/">TOS</a> -
 <a href="/privacy/">Privacy</a> -
 <a href="/copyright/">Copyright</a>
