--- a/apps/mac/web/rs-plugin/css/settings.css
+++ b/apps/mac/web/rs-plugin/css/settings.css
@@ -48,7 +48,7 @@ text-shadow:none;
 font-size:60px;
 line-height:60px;
 font-weight:300;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 background-color:transparent;
 text-decoration:none;
 text-transform:uppercase;
@@ -79,7 +79,7 @@ text-shadow:none;
 font-size:37px;
 line-height:37px;
 font-weight:300;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 background-color:transparent;
 text-decoration:none;
 text-transform:uppercase;
@@ -93,7 +93,7 @@ border-style:none;
 font-size:25px;
 line-height:25px;
 font-weight:800;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -126,7 +126,7 @@ text-shadow:none;
 font-size:25px;
 line-height:25px;
 font-weight:300;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 background-color:transparent;
 text-decoration:none;
 text-transform:uppercase;
@@ -140,7 +140,7 @@ border-style:none;
 font-size:13px;
 line-height:25px;
 font-weight:400;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 color:#ffffff;
 text-decoration:none;
 background-color:transparent;
@@ -173,7 +173,7 @@ text-shadow: none;
 font-size: 60px;
 line-height: 60px;
 font-weight: 300;
-font-family: "Open Sans", sans-serif;
+font-family: "Avenir", sans-serif;
 background-color: rgba(0, 0, 0, 0);
 text-decoration: none;
 text-transform: uppercase;
@@ -189,7 +189,7 @@ text-shadow: none;
 font-size: 34px;
 line-height: 34px;
 font-weight: 300;
-font-family: "Open Sans", sans-serif;
+font-family: "Avenir", sans-serif;
 background-color: rgba(0, 0, 0, 0);
 text-decoration: none;
 text-transform: uppercase;
@@ -220,7 +220,7 @@ color:rgb(251,213,114);
 font-weight:600;
 font-size:50px;
 line-height:50px;
-font-family: 'Open Sans', sans-serif;
+font-family: 'Avenir', sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -233,7 +233,7 @@ color:rgb(251,213,114);
 font-weight:300;
 font-size:90px;
 line-height:90px;
-font-family: 'Open Sans', sans-serif;
+font-family: 'Avenir', sans-serif;
 margin:0px;
 letter-spacing: 20px;
 border-width:0px;
@@ -247,7 +247,7 @@ color:#333;
 font-weight:700;
 font-size:70px;
 line-height:70px;
-font-family:"Open Sans";
+font-family:"Avenir";
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -260,7 +260,7 @@ color:#333;
 font-weight:300;
 font-size:40px;
 line-height:40px;
-font-family:"Open Sans";
+font-family:"Avenir";
 margin:0px;
 letter-spacing: 5px;
 border-width:0px;
@@ -318,7 +318,7 @@ white-space:nowrap;
 font-size:55px;
 line-height:65px;
 font-weight:700;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:#fff;
 text-decoration:none;
 background-color:transparent;
@@ -333,7 +333,7 @@ border-style:none;
 font-size:25px;
 line-height:25px;
 font-weight:600;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:#fff;
 text-decoration:none;
 background-color:transparent;
@@ -362,7 +362,7 @@ white-space:nowrap;
 font-size:30px;
 line-height:30px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(102, 102, 102);
 text-decoration:none;
 background-color:transparent;
@@ -430,7 +430,7 @@ text-shadow:none;
 font-weight:800;
 font-size:24px;
 line-height:20px;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -444,7 +444,7 @@ text-shadow:none;
 font-weight:800;
 font-size:24px;
 line-height:20px;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -458,7 +458,7 @@ text-shadow:none;
 font-weight:300;
 font-size:24px;
 line-height:20px;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -472,7 +472,7 @@ text-shadow:none;
 font-weight:800;
 font-size:30px;
 line-height:36px;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 padding:3px 10px;
 margin:0px;
 border-width:0px;
@@ -488,7 +488,7 @@ text-shadow:none;
 font-weight:300;
 font-size:30px;
 line-height:36px;
-font-family:"Open Sans", sans-serif;
+font-family:"Avenir", sans-serif;
 padding:3px 10px;
 padding-top:1px;
 margin:0px;
@@ -546,7 +546,7 @@ text-shadow:none;
 font-weight:300;
 font-size:30px;
 line-height:30px;
-font-family:"Open Sans";
+font-family:"Avenir";
 background-color:transparent;
 }
 
@@ -557,7 +557,7 @@ text-shadow:none;
 font-weight:300;
 font-size:16px;
 line-height:26px;
-font-family:"Open Sans";
+font-family:"Avenir";
 background-color:transparent;
 }
 
@@ -575,7 +575,7 @@ background-color:transparent;
 font-size:30px;
 line-height:75px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(0, 0, 0);
@@ -592,7 +592,7 @@ border-style:none;
 font-size:50px;
 line-height:70px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(0, 0, 0);
@@ -610,7 +610,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Open Sans";
+font-family:"Avenir";
 background-color:#db4360;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -625,7 +625,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Open Sans";
+font-family:"Avenir";
 background-color:#fff;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -640,7 +640,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Open Sans";
+font-family:"Avenir";
 background-color:#67ae73;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -672,7 +672,7 @@ border-style:none;
 font-size:60px;
 line-height:60px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(102, 102, 102);
 text-decoration:none;
 background-color:transparent;
@@ -688,7 +688,7 @@ border-style:none;
 font-size:34px;
 line-height:30px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(102, 102, 102);
 text-decoration:none;
 background-color:transparent;
@@ -704,7 +704,7 @@ border-style:none;
 font-size:18px;
 line-height:26px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(117, 117, 117);
 text-decoration:none;
 background-color:transparent;
@@ -732,7 +732,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(52, 73, 94);
 text-decoration:none;
 background-color:transparent;
@@ -745,7 +745,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(52, 73, 94);
@@ -759,7 +759,7 @@ border-style:none;
 font-size:24px;
 line-height:30px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(227, 58, 12);
 text-decoration:none;
 background-color:transparent;
@@ -773,7 +773,7 @@ border-style:none;
 font-size:21px;
 line-height:26px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(227, 58, 12);
 text-decoration:none;
 background-color:transparent;
@@ -787,7 +787,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(227, 58, 12);
@@ -801,7 +801,7 @@ border-style:none;
 font-size:24px;
 line-height:30px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(243, 156, 18);
 text-decoration:none;
 background-color:transparent;
@@ -814,7 +814,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(243, 156, 18);
@@ -838,7 +838,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -851,7 +851,7 @@ border-style:none;
 font-size:30px;
 line-height:36px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -865,7 +865,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -879,7 +879,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:#ffffff;
 text-decoration:none;
 background-color:transparent;
@@ -894,7 +894,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(127, 140, 141);
@@ -908,7 +908,7 @@ border-style:none;
 font-size:30px;
 line-height:36px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:transparent;
@@ -922,7 +922,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:transparent;
@@ -935,7 +935,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(52, 73, 94);
 text-decoration:none;
 background-color:transparent;
@@ -949,7 +949,7 @@ border-style:none;
 font-size:17px;
 line-height:28px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -969,7 +969,7 @@ border-style:none;
 font-size:40px;
 line-height:40px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(0, 0, 0);
@@ -983,7 +983,7 @@ border-style:none;
 font-size:30px;
 line-height:30px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:rgb(255, 255, 255);
@@ -998,7 +998,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Avenir";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(243, 156, 18);
@@ -1022,7 +1022,7 @@ border-style:none;
 		font-weight: 300;
 		font-size: 19px;
 		line-height: 19px;
-		font-family: 'Open Sans', sans;
+		font-family: 'Avenir', sans;
 	}
 
 .tp-caption.noshadow {
