--- a/apps/mac/web/sass/styles.scss
+++ b/apps/mac/web/sass/styles.scss
@@ -23,7 +23,7 @@ $white-color : 			#FFFFFF;
 $black-color: 			#000000;
 
 //Font Styling & Sizing
-$font-stack : 			'Open Sans', Tahoma, Arial;
+$font-stack : 			'Avenir', Tahoma, Arial;
 
 $font-size-base:        14px; //Important To Be 14px For FontAwesome Rendering
 $font-size-large:       ceil(($font-size-base * 1.25)); // ~18px
