--- a/apps/mac/web/rs-plugin/css/settings-ie8.css
+++ b/apps/mac/web/rs-plugin/css/settings-ie8.css
@@ -43,7 +43,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 20px;
 			line-height: 20px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			padding: 3px 4px;
 			padding-top: 1px;
 			margin: 0px;
@@ -76,7 +76,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 36px;
 			line-height: 36px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			padding: 0px 4px;
 			margin: 0px;
 			border-width: 0px;
@@ -124,7 +124,7 @@ website:   	http://www.themepunch.com
 			font-weight: 300;
 			font-size: 20px;
 			line-height: 20px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -139,7 +139,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 36px;
 			line-height: 36px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -153,7 +153,7 @@ website:   	http://www.themepunch.com
 			font-weight: 300;
 			font-size: 42px;
 			line-height: 42px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -167,7 +167,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 60px;
 			line-height: 60px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -182,7 +182,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 72px;
 			line-height: 72px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -195,7 +195,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 20px;
 			line-height: 20px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -208,7 +208,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 20px;
 			line-height: 20px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -221,7 +221,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 20px;
 			line-height: 20px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -235,7 +235,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800;
 			font-size: 36px;
 			line-height: 36px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 			margin: 0px;
 			border-width: 0px;
 			border-style: none;
@@ -270,7 +270,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800; 
 			font-size: 24px; 
 			line-height: 20px; 
-			font-family: 'Open Sans', sans-serif; 
+			font-family: 'Avenir', sans-serif; 
 			margin: 0px; 
 			border-width: 0px; 
 			border-style: none; 
@@ -283,7 +283,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800; 
 			font-size: 24px; 
 			line-height: 20px; 
-			font-family: 'Open Sans', sans-serif; 
+			font-family: 'Avenir', sans-serif; 
 			margin: 0px; 
 			border-width: 0px; 
 			border-style: none; 
@@ -296,7 +296,7 @@ website:   	http://www.themepunch.com
 			font-weight: 300; 
 			font-size: 24px; 
 			line-height: 20px; 
-			font-family: 'Open Sans', sans-serif; 
+			font-family: 'Avenir', sans-serif; 
 			margin: 0px; 
 			border-width: 0px; 
 			border-style: none; 
@@ -309,7 +309,7 @@ website:   	http://www.themepunch.com
 			font-weight: 800; 
 			font-size: 30px; 
 			line-height: 36px; 
-			font-family: 'Open Sans', sans-serif; 
+			font-family: 'Avenir', sans-serif; 
 			padding: 3px 10px; 
 			margin: 0px; 
 			border-width: 0px; 
@@ -324,7 +324,7 @@ website:   	http://www.themepunch.com
 			font-weight: 300; 
 			font-size: 30px; 
 			line-height: 36px; 
-			font-family: 'Open Sans', sans-serif; 
+			font-family: 'Avenir', sans-serif; 
 			padding: 3px 10px; 
   			padding-top: 1px;
 			margin: 0px; 
@@ -362,7 +362,7 @@ website:   	http://www.themepunch.com
   font-weight: 300;
 			font-size: 19px;
 			line-height: 19px;
-			font-family: 'Open Sans', sans;
+			font-family: 'Avenir', sans;
 	}
 
 .tp-caption.noshadow {
