--- a/css/main.sass
+++ b/css/main.sass
@@ -11,7 +11,7 @@
 $rs: 16px
 
 $font-serif: Linux Libertine
-$font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
+$font-sans: Avenir, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 
 
 @mixin respond-to($breakpoint)
@@ -360,7 +360,7 @@ body
       text-overflow: ellipsis
   .post-content
     width: 100%
-    font-family: $font-serif
+    font-family: $font-sans
     color: #333
     h1, h2, h3
       font-family: $font-sans
