--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -117,7 +117,7 @@
             <a href={{ "/" | prepend: site.baseurl }} class="btn">Back to Overview</a>
         </div>
     </div>
-    {% include javascripts.html %}
+    {% include javascripts.html %}{% include footer.html %}
 </body>
 
 </html>
