--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
     {% include header.html %}
 
     <!-- content start -->
 
     <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+        <div class="wrapper">
+            {{ content }}
+        </div>
     </div>
 
     <!-- content end -->
 
-    {% include footer.html %}
-    {% include javascripts.html %}
+    {% include javascripts.html %} {% include footer.html %}
 
-  </body>
+</body>
 
 </html>
