--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -1,7 +1,8 @@
-<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="{{ " /assets/js/jquery.min.js " | prepend: site.baseurl  }}"></script>
 <script type="text/javascript" src="{{ " /assets/js/jquery.fitvids.js " | prepend: site.baseurl  }}"></script>
 <script type="text/javascript" src="{{ " /assets/js/index.js " | prepend: site.baseurl  }}"></script>
 <script type="text/javascript" src="{{ " /assets/js/readingTime.min.js " | prepend: site.baseurl  }}"></script>
+<script type="text/javascript" src="{{ " /assets/js/js.cookie.js " | prepend: site.baseurl  }}"></script>
 <script>
     (function($) {
         "use strict";
