updated/centralized product pages

--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-{{ content }} {% include javascripts.html %} {% include newsletter.html %}
+{% include javascripts.html %} {% include chat.html %} {% include newsletter.html %} {{ content }}
 
 </html>
