--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -116,6 +116,7 @@
     }
     
     #fixed-form-container {
+        z-index: 999;
         position: fixed;
         bottom: 0px;
         left: 3%;
