--- a/_includes/home_menu.html
+++ b/_includes/home_menu.html
@@ -1,5 +1,6 @@
 <a href="/about/">About</a> -
 <a href="/projects/">Projects</a> -
+<a href="/newsletter/">Newsletter</a> -
 <a href="/search/">Search</a> -
 <a href="/categories/">Categories</a> -
 <a href="/feed.xml">RSS</a>
