update font awesome + added markdown.love

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,8 +30,8 @@
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
     <link rel="shortcut icon" href="{{ " /assets/images/favicon.png " | prepend: site.baseurl }}" type="image/png" />
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ " /css/fontawesome.min.css "  | prepend: site.baseurl  }}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ " /css/faall.css "  | prepend: site.baseurl  }}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{{ " /css/main.css "  | prepend: site.baseurl  }}" />
     <link rel="stylesheet" type="text/css" media="print" href="{{ " /css/print.css "  | prepend: site.baseurl  }}" />
     <link href="{{ " /css/comments.css "  | prepend: site.baseurl  }}" media="screen, projection" rel="stylesheet" type="text/css" />
