--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <section class="copyright">All content copyright <a href="mailto:{{ site.email}}">{{ site.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; All rights reserved.</section>
         {% for social in site.social %} {% if social.url %}
         <a class="icon-{{ social.icon }}" href="{{ social.url }}" {% if social.desc %} title="{{ social.desc }}" {% endif %} ">
-      <i class="fa fa-{{ social.icon }} "></i>
+      <i class=" fa fab-{{ social.icon }} "></i>
     </a>
     &nbsp;&nbsp;·&nbsp;&nbsp;
     {% endif %}
