--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,8 @@
                     <div class="cf post-meta-text">
                         <div class="author-image" style="background-image: url({{ site.author_image | prepend: site.baseurl }})">Blog Logo
                         </div>
-                        <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ site.author }}</h4>
+                        <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">
+                            {{ site.author }}</h4>
                         {% if page.date %} on
                         <time datetime="{{ page.date | date: " %F %R " }}">{{ page.date | date_to_string }}</time>
                         <!-- , tagged on {{#foreach tags}}<span class="post-tag-{{slug}}">{{#if @first}}{{else}}, {{/if}}<a href="/tag/{{slug}}">{{name}}</a></span>{{/foreach}} -->
@@ -77,7 +78,7 @@
                         <a class="subscribe" href="{{ " /feed.xml " | prepend: site.baseurl }}"> <span class="tooltip">
                                 <i class="fa fa-rss"></i> You should subscribe to my feed.</span></a>
                         <div class="inner">
-                            <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{site.author}}</a> &copy; {{ site.time | date: '%Y' }}<br>All rights reserved.</section>
+                            <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{site.author}}</a> &copy; {{ site.yearStart }}-{{ site.time | date: '%Y' }}<br>All rights reserved.</section>
                         </div>
                     </footer>
                 </div>
@@ -98,7 +99,8 @@
                     dsq.type = 'text/javascript';
                     dsq.async = true;
                     dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0])
+                    .appendChild
                         (dsq);
                 })();
             </script>
