--- a/_layouts/bestof.html
+++ b/_layouts/bestof.html
@@ -1,8 +1,5 @@
 --- layout: page ---
-<div class="bestof">
-    <h2>{{ page.title }}</h2>
 
-    <div class="blog-post spacing">
-        {{ content }}
-    </div>
+<div class="main">
+    {{ content }}
 </div>
