--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 {% include javascripts.html %} {% include chat.html %} {% include newsletter.html %} {{ content }}
 
