--- a/_sass/bourbon/functions/_px-to-rem.scss
+++ b/_sass/bourbon/functions/_px-to-rem.scss
@@ -1,6 +1,6 @@
 // Convert pixels to rems
 // eg. for a relational value of 12px write rem(12)
-// Assumes $em-base is the font-size of <html>
+// Assumes $em-base is the font-size of <html lang="en">
 
 @function rem($pxval) {
   @if not unitless($pxval) {
